--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     test
     <button class="max">Pirmas</button>
     <button class="mini">Antras</button>
+    <button class="mini">Antras</button>
 </body>
 </html>
